--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   	<servlet.api.version>3.1.0</servlet.api.version>
   	<jsp.api.version>2.0</jsp.api.version>
   	<dom4j.version>2.0.0</dom4j.version>
+  	<commons.codec.version>1.10</commons.codec.version>
   </properties>
   
   <dependencies>
@@ -49,6 +50,12 @@
 		    <groupId>org.dom4j</groupId>
 		    <artifactId>dom4j</artifactId>
 		    <version>${dom4j.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>${commons.codec.version}</version>
 		</dependency>
 
   </dependencies>
