--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,33 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <properties>
+  	<jdk.version>1.7</jdk.version>
+  	<jstl.version>1.2</jstl.version>
   	<zookeeper.version>3.4.6</zookeeper.version>
   	<commons.lang.version>3.4</commons.lang.version>
   	<servlet.api.version>3.1.0</servlet.api.version>
   	<jsp.api.version>2.0</jsp.api.version>
   	<dom4j.version>2.0.0</dom4j.version>
   	<commons.codec.version>1.10</commons.codec.version>
+  	<solr.version>6.2.1</solr.version>
+  	<disruptor.version>3.3.6</disruptor.version>
+  	<akka.version>2.4.14</akka.version>
   </properties>
   
   <dependencies>
+  		<dependency>  
+		    <groupId>jdk.tools</groupId>  
+		    <artifactId>jdk.tools</artifactId>  
+		    <version>${jdk.version}</version>  
+		    <scope>system</scope>  
+		    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>  
+		</dependency>
   
+  		<dependency>
+		    <groupId>org.apache.solr</groupId>
+		    <artifactId>solr-core</artifactId>
+		    <version>${solr.version}</version>
+		</dependency>
   		<dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
@@ -31,7 +48,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>${jstl.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -56,6 +73,24 @@
 		    <groupId>commons-codec</groupId>
 		    <artifactId>commons-codec</artifactId>
 		    <version>${commons.codec.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.lmax</groupId>
+		    <artifactId>disruptor</artifactId>
+		    <version>${disruptor.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.typesafe.akka</groupId>
+		    <artifactId>akka-actor_2.11</artifactId>
+		    <version>${akka.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.typesafe.akka</groupId>
+		    <artifactId>akka-remote_2.11</artifactId>
+		    <version>${akka.version}</version>
 		</dependency>
 
   </dependencies>
