--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,16 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.typesafe.akka</groupId>
-		    <artifactId>akka-remote_2.11</artifactId>
-		    <version>${akka.version}</version>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-remote_2.11</artifactId>
+			<version>${akka.version}</version>
 		</dependency>
+
+	  <dependency>
+		  <groupId>io.projectreactor</groupId>
+		  <artifactId>reactor-core</artifactId>
+		  <version>3.1.7.RELEASE</version>
+	  </dependency>
 
   </dependencies>
 </project>
