--- a/pom.xml
+++ b/pom.xml
@@ -100,5 +100,10 @@
 		  <version>3.1.7.RELEASE</version>
 	  </dependency>
 
+	  <dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>19.0</version>
+	  </dependency>
   </dependencies>
 </project>
