--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>${commons.lang.version}</version>
 		</dependency>
+
+	  <dependency>
+		  <groupId>commons-pool</groupId>
+		  <artifactId>commons-pool</artifactId>
+		  <version>1.6</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-pool2</artifactId>
+		  <version>2.5.0</version>
+	  </dependency>
 		
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -104,6 +116,25 @@
 		  <groupId>com.google.guava</groupId>
 		  <artifactId>guava</artifactId>
 		  <version>19.0</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.javassist</groupId>
+		  <artifactId>javassist</artifactId>
+		  <version>3.23.1-GA</version>
+		  <optional>true</optional>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.ow2.asm</groupId>
+		  <artifactId>asm-all</artifactId>
+		  <version>5.2</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>io.dropwizard.metrics</groupId>
+		  <artifactId>metrics-core</artifactId>
+		  <version>3.1.2</version>
 	  </dependency>
   </dependencies>
 </project>
